--- a/products/templates/products/brand_detail.html
+++ b/products/templates/products/brand_detail.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block css %}
+    
+<link rel="stylesheet" href="{% static 'en/css/brand-single.css' %}">
+{% endblock %}
+
 {% block body %}
 
         <!--=====================================
