add brand detail with products

--- a/products/templates/products/brand_detail.html
+++ b/products/templates/products/brand_detail.html
@@ -103,7 +103,7 @@
                                     <i class="active icofont-star"></i>
                                     <i class="active icofont-star"></i>
                                     <i class="icofont-star"></i>
-                                    <a href="product-video.html">(3)</a>
+                                    <a href="/products/{{item.slug}}">(3)</a>
                                 </div>
                                 <h6 class="product-name">
                                     <a href="product-video.html">{{item}}</a>
