Working on Django Queryset API

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -10,7 +10,7 @@
     <H1>Welcom</H1>
 <ul>
     {% for object in data %}
-        <li>{{object}}</li>
+        <li>{{object}} - {{object.price}}</li>
     {% endfor %}
 </ul>
 
