--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -214,7 +214,7 @@
                                 <h6 class="feature-price">
                                     <span>{{item.price}}</span>
                                 </h6>
-                                <p class="feature-desc">{{item.subitle|truncatewords:10}}</p>
+                                <p class="feature-desc">{{item.subtitle|truncatewords:10}}</p>
                                 <button class="product-add" title="Add to Cart">
                                     <i class="fas fa-shopping-basket"></i>
                                     <span>add</span>
@@ -1880,6 +1880,10 @@
 
         {% endblock body %}
 
+            
+
+
+                
 
 
 
