--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
 
-
+<style>
+    .myactive::before {
+        colr: #77777;
+    }
+</style>
         <!--=====================================
                     BANNER PART START
         =======================================-->
@@ -1844,6 +1848,7 @@
                                 <i class="fas fa-quote-left"></i>
                                 <p>{{item.review}}</p>
                                 <h5>{{item.user}}</h5>
+                                <p>{{item.rate}}</p>
                                 <ul>
                                     <li class="fas fa-star"></li>
                                     <li class="fas fa-star"></li>
@@ -1853,19 +1858,19 @@
                                 </ul>
                                 <img src="images/avatar/01.jpg" alt="testimonial">
                             </div>
-                        {% endfor %}
                                 <i class="fas fa-quote-left"></i>
                                 <p>Lorem ipsum dolor consectetur adipisicing elit neque earum sapiente vitae obcaecati magnam doloribus magni provident ipsam</p>
                                 <h5>mahmud hasan</h5>
                                 <ul>
-                                    <li class="fas fa-star"></li>
-                                    <li class="fas fa-star"></li>
-                                    <li class="fas fa-star"></li>
-                                    <li class="fas fa-star"></li>
-                                    <li class="fas fa-star"></li>
+                                    <li class="fas fa-star {% if item.rate > 0 %} myactive {% endif %} "></li>
+                                    <li class="fas fa-star {% if item.rate > 1 %} myactive {% endif %} "></li>
+                                    <li class="fas fa-star {% if item.rate > 2 %} myactive {% endif %} "></li>
+                                    <li class="fas fa-star {% if item.rate > 3 %} myactive {% endif %} "></li>
+                                    <li class="fas fa-star {% if item.rate > 4 %} myactive {% endif %} "></li>
                                 </ul>
                                 <img src="images/avatar/04.jpg" alt="testimonial">
                             </div>
+                        {% endfor %}
                         </div>
                     </div>
                 </div>
