add orders page

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,12 +44,10 @@
 
         <!-- CUSTOM -->
         <link rel="stylesheet" href="{% static 'en/css/main.css' %}">
-        {% block css%}
+        {% block CSS %}
             <link rel="stylesheet" href="{% static 'en/css/index.css' %}">
-        {% endblock css %}
-        
-
-
+        {% endblock CSS  %}
+    
 
         <!--=====================================
                     CSS LINK PART END
@@ -81,6 +79,7 @@
                                 </select>
                             </div>
                         </div>
+                    </div>
                     <div class="col-md-7 col-lg-4">
                         <ul class="header-top-list">
                             <li><a href="offer.html">offers</a></li>
@@ -154,22 +153,143 @@
                                     <a class="navbar-link" href="/">home</a>
                                 </li>
                                 <li class="navbar-item">
-                                    <a class="navbar-link" href="/products">shop</a>
+                                    <a class="navbar-link dropdown-arrow" href="/products">shop</a>
+
                                 </li>
-                                <li class="navbar-item">
-                                    <a class="navbar-link" href="/products/brands">Brands</a>
+                                <li class="navbar-item ">
+                                    <a class="navbar-link " href="/products/brands">Brands</a>
+                                    <div class="megamenu">
+                                        <div class="container megamenu-scroll">
+                                            <div class="row row-cols-5">
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">vegetables</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">carrot</a></li>
+                                                            <li><a href="#">broccoli</a></li>
+                                                            <li><a href="#">asparagus</a></li>
+                                                            <li><a href="#">cauliflower</a></li>
+                                                            <li><a href="#">eggplant</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">fruits</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">Apple</a></li>
+                                                            <li><a href="#">orange</a></li>
+                                                            <li><a href="#">banana</a></li>
+                                                            <li><a href="#">strawberrie</a></li>
+                                                            <li><a href="#">watermelon</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">dairy farms</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">Butter</a></li>
+                                                            <li><a href="#">Cheese</a></li>
+                                                            <li><a href="#">Milk</a></li>
+                                                            <li><a href="#">Eggs</a></li>
+                                                            <li><a href="#">cream</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">seafoods</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">Lobster</a></li>
+                                                            <li><a href="#">Octopus</a></li>
+                                                            <li><a href="#">Shrimp</a></li>
+                                                            <li><a href="#">Halabos</a></li>
+                                                            <li><a href="#">Maeuntang</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">diet foods</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">Salmon</a></li>
+                                                            <li><a href="#">Avocados</a></li>
+                                                            <li><a href="#">Leafy Greens</a></li>
+                                                            <li><a href="#">Boiled Potatoes</a></li>
+                                                            <li><a href="#">Cottage Cheese</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">fast foods</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">burger</a></li>
+                                                            <li><a href="#">milkshake</a></li>
+                                                            <li><a href="#">sandwich</a></li>
+                                                            <li><a href="#">doughnut</a></li>
+                                                            <li><a href="#">pizza</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">drinks</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">cocktail</a></li>
+                                                            <li><a href="#">hard soda</a></li>
+                                                            <li><a href="#">shampain</a></li>
+                                                            <li><a href="#">Wine</a></li>
+                                                            <li><a href="#">barley</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">meats</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">Meatball</a></li>
+                                                            <li><a href="#">Sausage</a></li>
+                                                            <li><a href="#">Poultry</a></li>
+                                                            <li><a href="#">chicken</a></li>
+                                                            <li><a href="#">Cows</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">fishes</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">scads</a></li>
+                                                            <li><a href="#">pomfret</a></li>
+                                                            <li><a href="#">groupers</a></li>
+                                                            <li><a href="#">anchovy</a></li>
+                                                            <li><a href="#">mackerel</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col">
+                                                    <div class="megamenu-wrap">
+                                                        <h5 class="megamenu-title">dry foods</h5>
+                                                        <ul class="megamenu-list">
+                                                            <li><a href="#">noodles</a></li>
+                                                            <li><a href="#">Powdered milk</a></li>
+                                                            <li><a href="#">nut & yeast</a></li>
+                                                            <li><a href="#">almonds</a></li>
+                                                            <li><a href="#">pumpkin</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="navbar-item dropdown">
                                     <a class="navbar-link" href="/orders">Orders</a>
                                 </li>
-                                <li class="navbar-item ">
-                                    <a class="navbar-link" href="/accounts/dashbord">Dashbord</a>
-                                    <ul class="dropdown-position-list">
-                                        <li><a href="login.html">login</a></li>
-                                        <li><a href="register.html">register</a></li>
-                                        <li><a href="reset-password.html">reset password</a></li>
-                                        <li><a href="change-password.html">change password</a></li>
-                                    </ul>
+                                <li class="navbar-item">
+                                    <a class="navbar-link" href="/accounts/dashboard">Dashboard</a>
                                 </li>
                             </ul>
                             <div class="navbar-info-group">
@@ -177,7 +297,7 @@
                                     <i class="icofont-ui-touch-phone"></i>
                                     <p>
                                         <small>call us</small>
-                                        <span>{{company_data.call_us}}</span>
+                                        <span>{{company_data.call_us}}/span
                                     </p>
                                 </div>
                                 <div class="navbar-info">
@@ -786,7 +906,7 @@
                                 <li>
                                     <i class="icofont-ui-email"></i>
                                     <p>
-                                       {{company_data.emails}}
+                                        {{company_data.emails}}
                                     </p>
                                 </li>
                                 <li>
@@ -826,7 +946,6 @@
                     <div class="col-sm-6 col-xl-3">
                         <div class="footer-widget">
                             <h3 class="footer-title">Download App</h3>
-                            <p class="footer-desc">{{company_data.mobile_app}}</p>
                             <div class="footer-app">
                                 <a href="{{company_data.android_url}}"><img src="images/google-store.png" alt="google"></a>
                                 <a href="{{company_data.iphone_url}}"><img src="images/app-store.png" alt="app"></a>
@@ -878,9 +997,3 @@
         =======================================-->
     </body>
 </html>
-
-
-
-
-
-
