add Caching using redis

--- a/products/templates/products/debug.html
+++ b/products/templates/products/debug.html
@@ -10,7 +10,7 @@
     <H1>Welcome</H1>
 <ul>
     {% for object in data %}
-        <li>{{object}} - Buy price : {{object.price}} - Sell price {{object.sell_price}}</li>
+        <li>{{object}} - Buy price : {{object.brand}} </li>
     {% endfor %}
 </ul>
 
