--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,11 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  {% extends "auth_base.html" %}
+  {% load django_bootstrap5 %}
+
+  {% block body %}
+      <section class="user-form-part">
+              <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-sm-10 col-md-12 col-lg-12 col-xl-10">
+                            <div class="user-form-logo">
+                                <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            </div>
+                            <div class="user-form-card">
+                                <div class="user-form-title">
+                                    <h2>welcome!</h2>
+                                    <p>Use your credentials to access</p>
+                                </div>
+                                <div class="user-form-group">
+                                    <ul class="user-form-social">
+                                        <li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i>login with facebook</a></li>
+                                        <li><a href="#" class="twitter"><i class="fab fa-twitter"></i>login with twitter</a></li>
+                                        <li><a href="#" class="google"><i class="fab fa-google"></i>login with google</a></li>
+                                        <li><a href="#" class="instagram"><i class="fab fa-instagram"></i>login with instagram</a></li>
+                                    </ul>
+                                    <div class="user-form-divider">
+                                        <p>or</p>
+                                    </div>
+                                    <form class="user-form" method="post" action="{% url 'login' %}">
+                                        {% csrf_token %}
+                                        
+                                        {% bootstrap_form form %}
+                                        <div class="form-button">
+                                            <button type="submit">login</button>
+                                            <input type="hidden" name="next" value="{{ next }}">
+                                            <p>Forgot your password?<a href="{% url 'password_reset' %}">reset here</a></p>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="user-form-remind">
+                                <p>Don't have any account?<a href="/accounts/signup">register here</a></p>
+                            </div>
+                            <div class="user-form-footer">
+                                <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+         </section>
+  {% endblock body %}
     
   {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
@@ -38,5 +79,3 @@
 
 {# Assumes you set up the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-</body>
-</html>
