--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -9,25 +9,17 @@
                             <a href="index.html"><img src="images/logo.png" alt="logo"></a>
                         </div>
                         <div class="user-form-card">
-                            {% if validlink %}
                             <div class="user-form-title">
-                                <h2>Please enter (and confirm) your new password.</h2>
+                                <h2>CHange Your Password</h2>
+                                <p>Make sure your current password is strong</p>
                             </div>
-
-                                <form class="user-form" method="post">
-                                    {% csrf_token %}
-                                    {% bootstrap_form form %}
-                                    <div class="form-button">
-                                        <button type="submit">Changemy password</button>
-                                    </div>
-                                </form>
-                            {% else %}
-                                <div class="user-form-title">
-                                    <h1>Password reset failed</h1>
-                                    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+                            <form class="user-form" method="post">
+                                {% csrf_token %}
+                                {% bootstrap_form form %}
+                                <div class="form-button">
+                                    <button type="submit">Save</button>
                                 </div>
-                                
-                            {% endif %}
+                            </form>
                         </div>
                         <div class="user-form-remind">
                             <p>Go Back To<a href="/accounts/login">login here</a></p>
@@ -39,7 +31,5 @@
                 </div>
             </div>
         </section>
-
-
 {% endblock body %}
  
