--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -17,7 +17,7 @@
                                 {% csrf_token %}
                                 {% bootstrap_form form %}
                                 <div class="form-button">
-                                    <button type="submit">Save</button>
+                                    <button type="submit">GET RESST LINK</button>
                                 </div>
                             </form>
                         </div>
