--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -132,37 +132,12 @@
                                 <p>{{product.description|safe}}</p>
                             </div>
                         </div>
-                        <div class="product-details-frame">
-                            <h3 class="frame-title">Reviews (2)</h3>
-                            <ul class="review-list">
-                                
-                            {% for review in product_reviews %}
-                                <li class="review-item">
-                                    <div class="review-media">
-                                        <a class="review-avatar" href="#">
-                                            <img src="images/avatar/01.jpg" alt="review">
-                                        </a>
-                                        <h5 class="review-meta">
-                                            <a href="#">{{review.user}}</a>
-                                            <span>June 02, 2020</span>
-                                        </h5>
-                                    </div>
-                                    <ul class="review-rating">
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rating"></li>
-                                        <li class="icofont-ui-rate-blank"></li>
-                                    </ul>
-                                    <p class="review-desc">{{review.review}}</p>
-                                </li>
-                            {% endfor %}
-
-                            </ul>
+                        <div class="product-details-frame"  id="all-reviews">
+                            {% include 'includes/review.html' %}
                         </div>
-                        <div class="product-details-frame">
+                        <div class="product-details-frame" >
                             <h3 class="frame-title">add your review</h3>
-                            <form class="review-form" method="post" action="/products/{{object.slug}}/add-review">
+                            <form id="reviewForm" class="review-form" method="post" action="/products/{{object.slug}}/add-review">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="col-lg-12">
@@ -688,5 +663,31 @@
         <!--=====================================
                  PRODUCT RELATED PART END
         =======================================-->
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script>
+            
+            $(document).ready(function(){
 
+                $(document).on('submit','#reviewForm',function(event){
+                    // stop refresh
+                    event.preventDefault();
+
+                    // send form data to backend
+                    $.ajax({
+                        type: $(this).attr('method'), 
+                        url:  $(this).attr('action'),
+                        data: $(this).serialize() ,
+                        dataType: 'json',
+                        success:function(response){
+                            $('#all-reviews').html(response['result'])
+                            $('#reviewForm').trigger("reset")
+                        },
+                        error:function(){
+
+                        }
+                    })
+                })
+
+            })
+        </script>
 {% endblock body %}
