--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -87,7 +87,7 @@
                                 </ul>
                             </div>
                             <div class="details-add-group">
-                                <form action="/orders/add-to-cart" method="post" class="row">
+                                <form id="addToCart" action="/orders/add-to-cart" method="post" class="row">
                                     {% csrf_token %}
                                     <div class="col-6">
                                         <input type="hidden" name="product_id" value="{{object.id}}">
@@ -688,6 +688,27 @@
                     })
                 })
 
+                $(document).on('submit','#addToCart',function(event){
+                    // stop refresh
+                    event.preventDefault();
+
+                    // send form data to backend
+                    $.ajax({
+                        type: $(this).attr('method'), 
+                        url:  $(this).attr('action'),
+                        data: $(this).serialize() ,
+                        dataType: 'json',
+                        success:function(response){
+                            $('#cart_sidebar').html(response['result'])
+                           // $('#reviewForm').trigger("reset")
+                        },
+                        error:function(){
+
+                        }
+                    })
+                })
+
             })
         </script>
+
 {% endblock body %}
